Fix hero text display on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -263,15 +263,6 @@ nav.navbar {
   }
 }
 
-.hero-text {
-  width: 610px;
-  display: flex;
-  text-align: center;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 6rem;
-}
-
 a.cta-btn {
   -webkit-appearance: none; // This is so the background-color works on Safari
   height: 4.5em !important;
